style.css
* {
  font-family: Raleway;
}

header {
  box-shadow: 0 0 8px 0 rgba(0,0,0,0.3);
}

::-webkit-scrollbar {
    width: 0px;
    background: transparent; /* make scrollbar transparent */
}

/* .page-footer{
    background-color:#1a252f;
    background-color: #2c3e50!important;
    color: #fff;
    font-size: 80%;
} */

.home-row {
  position: relative;
}

#btn-in, #btn-out {
  position: absolute;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.3);
  top: 50%;
  border: 2px solid;
  border-color: rgba(255,255,255,0.75)
}

#btn-in {
  right: 0;
  border-radius: 5px 0px 0px 5px;
}

#btn-out {
  left: 0;
  border-radius: 0px 5px 5px 0px;
}

.btn:hover {
  opacity: 0.80;
} 

.accordion {
  background-color: #eee;
  color: #444;
  cursor: pointer;
  padding: 18px;
  width: 100%;
  border: none;
  text-align: left;
  outline: none;
  font-size: 15px;
  transition: 0.4s;
  margin-bottom: 10px;
}

.active, .accordion:hover {
  background-color: #ccc;
}

.accordion:after {
  content: '\002B';
  color: #777;
  font-weight: bold;
  float: right;
  margin-left: 5px;
}

.active:after {
  content: "\2212";
}

.panel {
  padding: 0 18px;
  background-color: white;
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.2s ease-out;
}

.row {
  margin-left: 0!important;
  margin-right: 0!important;
}

.modal-backdrop {
  z-index: -1;
}

#logout {
  cursor: pointer;
}

footer {
  box-shadow: 0 0 8px 0 rgba(0,0,0,0.3);
}

.footer-link {
  color: white;
}

.footer-link:hover {
  color: #5cb85c;
}

/************* Team Member *******/
#team
{
  padding-top: 50px;
  padding-bottom: 50px;
  color: #555;
}
/* h1
{
  text-align: center;
  color: #555 !important;
  padding-bottom: 10px;
}
h1::after
{
  content: '';
  background: #007bff;
  display: 3px;
  width: 170px;
  margin: 20px auto 5px;
} */
.profile-pic
{
  padding: 5px;
  margin-top: 25px;
}
.profile-pic .img-box
{
  opacity: 1;
  display: block;
  position: relative;
}
.profile-pic .img-box img
{
height: 100px;
filter: grayscale(1);
}
.profile-pic .img-box img:hover
{
filter: grayscale(0);
cursor: pointer;
}
.profile-pic h2
{
  font-size: 22px;
  font-weight: bold;
  margin-top: 15px;
  color: #007bff !important;
}
.profile-pic h3
{
  font-size: 15px;
  font-weight: bold;
  margin-top: 15px;
}
#team .fa
{
height: 25px;
width: 25px;
color: #007bff !important;
background: #fff;
padding: 4px;
border-radius: 50%;
}
.img-box ul
{
padding: 15px 0;
position: absolute;
z-index: 2;
bottom: 0;
left: 50%;
transform: translateX(-50%);
opacity: 0;
}
.img-box ul li
{
padding: 5px;
display: inline-block;
}
.img-box:hover ul
{
  opacity: 1;
}
.img-box ul, .img-box ul li
{
  transition: 0.5s;
}

